# xin

./: .gitignore  Cargo.toml  README.md
.claude/: CLAUDE.md  settings.local.json
crates/xin-ast/: Cargo.toml
crates/xin-codegen/: Cargo.toml
crates/xin-diagnostics/: Cargo.toml
crates/xin-ir/: Cargo.toml
crates/xin-lexer/: Cargo.toml
crates/xin-parser/: Cargo.toml
crates/xin-semantic/: Cargo.toml
examples/: fibonacci.xin  hello.xin  map_simple.xin  map_test.xin  string_test.xin  test_int.xin  test_map_runtime.xin
runtime/: runtime.c
src/: compiler.rs  lib.rs  linker.rs  main.rs  runtime.rs
tests/: integration_test.rs  run_tests.sh  test_map_parser.rs  test_map_parser_output.rs
tests/arrays/: basic.xin  mutable.xin  nested.xin
tests/basic/: arithmetic.expected  arithmetic.xin  type_conversion.expected  type_conversion.xin  types.expected  types.xin  variables.expected  variables.xin
tests/control_flow/: break_continue.expected  break_continue.xin  for_loops.expected  for_loops.xin  if_else.expected  if_else.xin  if_else_branching.xin
tests/floats/: arithmetic.expected  arithmetic.xin
tests/functions/: basic_funcs.expected  basic_funcs.xin  recursion.expected  recursion.xin  return_test.expected  return_test.xin
tests/maps/: basic.expected  basic.xin  methods.xin
tests/nullable/: basic.xin
tests/operators/: comparison.expected  comparison.xin  logical.expected  logical.xin  unary.expected  unary.xin
tests/strings/: concat.expected  concat.xin  printf.expected  printf.xin
tests/templates/: basic.expected  basic.xin  escape.expected  (+3 more)
(+43 files in other folders)
